--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "@types/chart.js": "^2.9.16",
+    "@types/react-select": "^3.0.11",
     "@types/reactstrap": "^8.4.2",
     "axios": "^0.19.2",
     "chart.js": "^2.9.3",
@@ -19,6 +20,7 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-scripts": "3.4.0",
+    "react-select": "^3.1.0",
     "reactstrap": "^8.4.1",
     "typescript": "^3.8.3"
   },
