--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "gh-pages": "^2.2.0",
     "moment": "^2.24.0",
     "node-sass": "^4.13.1",
+    "primeicons": "^2.0.0",
     "primereact": "^4.1.2",
     "query-string": "^6.11.1",
     "react": "^16.13.1",
