--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "homepage": "https://sobesri.github.io/covid19Stat",
   "dependencies": {
+    "@react-google-maps/api": "^1.8.8-alpha",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
